<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Talent Radar</string>
    <string name="generic_error">Ocurrió un error</string>
    <string name="generic_wait">Espere…</string>
    <string name="menu_preferences_title">Preferencias</string>
    <string name="menu_log_out_title">Log out</string>
    <string name="menu_hunts_title">Administrar búsquedas</string>
    <string name="pinged_successfully">¡Ping! a %s enviado exitosamente!</string>
    <string name="talent_radar_site_url">http://www.talent-radar.com</string>
    <string name="dispatcher_loading_message">Ingresando…</string>

    <!-- Login screen -->
    <string name="login_fancy_message">… las oportunidades están cerca…</string>
    <string name="login_new_user">Soy nuevo aquí</string>
    <string name="login_login">Ingresar!</string>
    <string name="login_label_password">Contraseña</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_login_with_linkedin">Ingresar con LinkedIn</string>
    <string name="login_authenticating">Autenticando…</string>
    <string name="login_dialog_incorrectLogin_title">Ups!</string>
    <string name="login_dialog_incorrectLogin_message">Usuario o contrasena incorrectos</string>
    <string name="login_dialog_error_title">Ups!</string>
    <string name="login_dialog_error_message">Problema al contactar con el servidor</string>
    <string name="login_unknown_host_exception">Problema al contactar con el servidor. Revise la conexión a Internet.</string>

    <!-- Profile view -->
    <string name="profile_no_skills_button">No skills</string>
    <string name="profile_no_headline">(Este usuario no ha ingresado una descripción)</string>
    <string name="profile_skills">Skills</string>
    <string name="profile_label_jobs">Experiencia laboral</string>
    <string name="profile_no_jobs">No se registran posiciones laborales</string>
    <string name="profile_current_job_suffix">(actual)</string>

    <!-- Main Activity tab labels -->
    <string name="tab_label_profile">Perfil</string>
    <string name="tab_label_radar">Radar</string>
    <string name="tab_label_dashboard">Dashboard</string>
    <string name="tab_label_hunts">Búsquedas</string>

    <!-- Dashboard -->
    <string name="dashboard_no_notifications_label">¡Aún no has interactuado con otros usuarios!</string>

    <!-- Mini profile -->
    <string name="mini_profile_see_profile">Ver Perfil</string>
    <string name="mini_profile_ping">Ping!</string>
    <string name="mini_profile_save_contact">Guardar contacto</string>

    <!-- Expired -->
    <string name="expired_message">Pronto una nueva versión estará disponible en nuestro sitio para que siga los últimos pasos del mercado laboral atentamente. Síganos en nuestro sitio web:</string>
    <string name="expired_title">¡Oh, lo sentimos!</string>
    <string name="expired_subtitle">¡Su licencia de prueba de Talent Radar ya ha expirado!</string>
    <string name="expired_logo_content_description">Logo</string>
    <string name="talent_radar_site_url_to_be_shown">talent-radar.com</string>

    <!-- Hunts -->
    <string name="hunts_no_hunts_label">¡No has creado búsquedas aún!</string>
    <string name="hunts_empty">¡Esta búsqueda no ha encontrado usuarios todavía!</string>
    <string name="hunts_default_hunt_empty">¡El portfolio de contactos no contiene usuarios actualmente!</string>
    <string name="new_hunt_edit_title">Editar Búsqueda</string>
    <string name="hunt_miniprofile_context_menu_remove_label">Remover usuario</string>
    <string name="hunt_miniprofile_context_menu_remove_successfully">%s ha sido removido exitosamente</string>
    <string name="default_hunt_title">Portfolio de contactos</string>
    <string name="default_hunt_description">Aquí encontrarás los usuarios que guardes a mano</string>
    <string name="hunt_notification_single_user" formatted="false">La búsqueda %s ha capturado a %s</string>
    <string name="hunt_notification_multiple_users" formatted="false">La búsqueda %s ha capturado a %s nuevos usuarios</string>
    <string name="new_hunt_message">Crear nueva búsqueda</string>
    <string name="hunt_edit_hunt_label">Editar</string>
    <!-- <string name="hunt_edit_hunt_label">Editar búsqueda</string> -->
    <string name="hunt_remove_hunt_label">Remover</string>
    <!-- <string name="hunt_remove_hunt_label">Remover búsqueda</string> -->
    <string name="hunt_empty_hunt_label">Vaciar</string>
    <!-- <string name="hunt_empty_hunt_label">Vaciar búsqueda</string> -->
    <string name="hunts_new_hunt_button_content_description">Crear nueva búsqueda</string>
    <string name="hunts_default_hunt_wont_be_removed">No es posible remover el porftolio de contactos</string>
    <string name="hunts_default_hunt_wont_be_edited">No es posible editar el porftolio de contactos</string>
    <string name="hunts_empty_hunt_successful">¡La búsqueda %s ha sido vaciada exitosamente!</string>
    <string name="hunts_empty_default_hunt_successful">¡El portfolio de contactos ha sido vaciado exitosamente!</string>

    <!-- Save contact -->
    <string name="save_contact_by_id_error">Ocurrió un error al querer guardar el usuario en el portfolio. Inténtelo de nuevo.</string>
    <string name="save_contact_success_format">%s fue correctamente guardado al portfolio de contactos</string>
    <string name="cancel_option_label">No</string>
    <string name="accept_option_label">Sí</string>
    <string name="ping_confirmation_question">¿Enviar ping a %s?</string>
    <string name="hunt_title_prefix">"Búsqueda "</string>
    <string name="hunt_miniprofile_username_format">Usuario %s</string>

</resources>