<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background" >

    <LinearLayout
        android:id="@+id/expired_layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/expired_logo"
            android:layout_width="256dp"
            android:layout_height="128dp"
            android:contentDescription="@string/expired_logo_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/login_application_logo" />

        <TextView
            android:id="@+id/expired_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expired_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FF0000"
            android:textSize="35dp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/expired_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/expired_subtitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/expired_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/expired_message"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:typeface="normal" />

        <Button
            android:id="@+id/expired_site_url"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talent_radar_site_url_to_be_shown"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0000ff" />
    </LinearLayout>

</ScrollView>