<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/login_background" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/login_layout_email_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="256dp"
                android:layout_height="128dp"
                android:contentDescription="Logo"
                android:scaleType="fitCenter"
                android:src="@drawable/login_application_logo" />

            <TextView
                android:id="@+id/login_label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/login_label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_layout_email_password"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_new_user" />

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_login" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>