<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:padding="5dp"
    android:background="@drawable/mini_profile_background"
    android:orientation="vertical" >
<!--     android:background="@android:color/darker_gray" -->

    <TextView
        android:id="@+id/mini_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/primary_text_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/mini_profile_user_pic"
            android:layout_width="77dp"
            android:layout_height="73dp"
            android:src="@drawable/default_profile_pic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mini_profile_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Headline"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/mini_profile_see_profile_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mini_profile_see_profile" />

        <Button
            android:id="@+id/mini_profile_ping_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mini_profile_ping" />

        <Button
            android:id="@+id/mini_profile_save_contact_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mini_profile_save_contact"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>